--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,9 +7,10 @@
       "request": "launch",
       "cwd": "${workspaceFolder}",
       "runtimeExecutable": "deno",
-      "runtimeArgs": ["run", "--inspect", "-A", "src/test.ts"],
+      "runtimeArgs": ["run", "--unstable", "--inspect", "-A", "src/test.ts"],
       "port": 9229,
-      "outputCapture": "std"
+      "console": "integratedTerminal",
+      //"outputCapture": "std"
     }
   ]
 }
