--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
-    "editor.formatOnSave": true,
-    "editor.defaultFormatter": "justjavac.vscode-deno",
-    "deno.enable": true,
-    "deno.unstable": true,
+  "editor.formatOnSave": true,
+  "editor.defaultFormatter": "denoland.vscode-deno",
+  "deno.enable": true,
+  "deno.unstable": true
 }
