--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,7 @@
   "editor.formatOnSave": true,
   "editor.defaultFormatter": "denoland.vscode-deno",
   "deno.enable": true,
-  "deno.unstable": true
+  "deno.unstable": true,
+  "deno.importmap": "importmap.json"
+
 }
